# shards

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  buildDocker.sh  buildDockerRelease.sh  buildRelease.bat  buildRelease.sh  clean.bat  clean.sh  docker-entrypoint.sh  file_read.h
.github/workflows/: CI.yml
sandbox/: CMakeLists.txt  main.c
src/: config.h  shards.h
src/graphics/: graphics.h  test.c
src/utils/: utils.h
src/utils/file/: file.h  file_read.c  file_write.c  file_write.h
src/utils/maths/: maths.h  matrices.h  vecs.h  vectors.h
src/utils/maths/vecs/: dv.c  dv2.c  dv3.c  dv4.c  iv.c  iv2.c  iv3.c  iv4.c
tests/: CMakeLists.txt  basic_test.c
